--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-"name": "clinic-api",
-"version": "1.0.0",
-"description": "Clinic Booking System API (Express + MySQL)",
-"main": "server.js",
-"scripts": {
-"start": "node server.js",
-"dev": "nodemon server.js"
-},
-"dependencies": {
-"express": "^4.18.2",
-"mysql2": "^3.3.0",
-"dotenv": "^16.3.1",
-"body-parser": "^1.20.2"
-},
-"devDependencies": {
-"nodemon": "^2.0.22"
-}
+  "name": "clinic-api",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mysql2": "^3.3.0",
+    "dotenv": "^16.3.1",
+    "body-parser": "^1.20.2",
+    "morgan": "^1.10.0",
+    "express-validator": "^7.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
